# lab1

./: Parkingticket.cpp  Parkingticket.h  Readme2.MD  User.cpp  User.h  Vehicle.cpp  Vehicle.h  main.cpp
labs2/: Address.cpp  Address.h  CMakeLists.txt  Car.cpp  Car.h  Parkingticket.cpp  Parkingticket.h  Truck.cpp  Truck.h  User.cpp  User.h  Vehicle.cpp  Vehicle.h  functions.cpp  functions.h  main.cpp
